WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197185
Action sheet shares a stringified URL instead of a URL object
https://bugs.webkit.org/show_bug.cgi?id=197185
Summary
Action sheet shares a stringified URL instead of a URL object
Tim Horton
Reported
2019-04-22 19:11:33 PDT
Action sheet shares a stringified URL instead of a URL object
Attachments
Patch
(10.10 KB, patch)
2019-04-22 19:11 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews112 for mac-highsierra
(2.91 MB, application/zip)
2019-04-22 20:59 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-04-22 19:11:48 PDT
Created
attachment 368005
[details]
Patch
Tim Horton
Comment 2
2019-04-22 19:11:49 PDT
<
rdar://problem/49962249
>
EWS Watchlist
Comment 3
2019-04-22 20:59:06 PDT
Comment hidden (obsolete)
Comment on
attachment 368005
[details]
Patch
Attachment 368005
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/11968287
New failing tests: webgl/2.0.0/conformance/context/context-release-upon-reload.html
EWS Watchlist
Comment 4
2019-04-22 20:59:07 PDT
Comment hidden (obsolete)
Created
attachment 368009
[details]
Archive of layout-test-results from ews112 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-highsierra Platform: Mac OS X 10.13.6
Alex Christensen
Comment 5
2019-04-23 07:58:10 PDT
Comment on
attachment 368005
[details]
Patch No unit test?
Darin Adler
Comment 6
2019-04-23 09:24:44 PDT
Comment on
attachment 368005
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368005&action=review
> Source/WebKit/ChangeLog:18 > + Make it possible to optionally provide WKShareSheet with > + a rect to present relative to.
Why doesn’t this bug title mention this second change? Is it related in some non-obvious way?
Tim Horton
Comment 7
2019-04-23 10:22:16 PDT
(In reply to Darin Adler from
comment #6
)
> Comment on
attachment 368005
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=368005&action=review
> > > Source/WebKit/ChangeLog:18 > > + Make it possible to optionally provide WKShareSheet with > > + a rect to present relative to. > > Why doesn’t this bug title mention this second change? Is it related in some > non-obvious way?
It is necessary in order to make the first change without regressing the popover tail on iPad (WKShareSheet previously would just center itself in the window, but the text selection assistant took a rect to pass through, like WKShareSheet does now).
WebKit Commit Bot
Comment 8
2019-04-23 11:15:44 PDT
Comment on
attachment 368005
[details]
Patch Clearing flags on attachment: 368005 Committed
r244553
: <
https://trac.webkit.org/changeset/244553
>
WebKit Commit Bot
Comment 9
2019-04-23 11:15:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug